Changes category concept to tags

--- a/priceEye/spiders/config/alkosto.yaml
+++ b/priceEye/spiders/config/alkosto.yaml
@@ -1,18 +1,18 @@
 base_url: https://www.alkosto.com
 tarjets:
-  - category: TELEVISORES
+  - tags: ['TELEVISORES', 'SMART TV']
     url: https://www.alkosto.com/tv/smart-tv/c/BI_120_ALKOS
     max_pages: 10
-  - category: COMPLEMENTO TV
+  - tags: ['TELEVISORES', 'COMPLEMENTOS TV']
     url: https://www.alkosto.com/complementos-tv/c/complementos-tv
     max_pages: 10
-  - category: COMPUTADORES
+  - tags: ['COMPUTADORES', 'PORTATILES']
     url: https://www.alkosto.com/computadores-tablet/computadores-portatiles/c/BI_104_ALKOS
     max_pages: 10
-  - category: ELECTRODOMESTICOS
+  - tags: ['ELECTRODOMESTICOS', 'REFRIGERACION']
     url: https://www.alkosto.com/electrodomesticos/grandes-electrodomesticos/refrigeracion/c/BI_0610_ALKOS
     max_pages: 10
-  - category: VIDEOJUEGOS
+  - category: ['VIDEOJUEGOS', 'CONSOLAS']
     url: https://www.alkosto.com/videojuegos/consolas/c/BI_131_ALKOS
     max_pages: 10
 
